logs/20251031_125526.log
Use Adapater:NVIDIA GeForce RTX 4060 Laptop GPU

FeatureLevel : 12.2

Complete create D3D12Device!!!

Begin CompileShader,path:Particle.VS.hlsl,profike:vs_6_0

Compile Succeeded, path:Particle.VS.hlsl, profike:vs_6_0
 
Begin CompileShader,path:Particle.PS.hlsl,profike:ps_6_0

Particle.PS.hlsl:23:65: error: extraneous ')' before ';'
    float32_t4 tex = gTexture.Sample(gSampler, uvTransformed.xy));
                                                                ^

Compile Succeeded, path:Particle.PS.hlsl, profike:ps_6_0
 
